Bump Deps & Fix Rare Overflow Bug

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@ body,
     width: 100%;
     height: 100%;
 }
-
+body {
+    overflow: hidden;
+}
 *,
 *::before,
 *::after {
